--- a/angular.json
+++ b/angular.json
@@ -26,11 +26,11 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/faviconlogo.svg",
               "src/assets"
             ],
             "styles": [
-              
+
               "src/styles.scss"
             ],
             "scripts": [
