--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
